persistent-volume.yml
# 3. The Deployment (Using the Claim)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        
        # B. Mount the volume into the container's file system
        volumeMounts:
        - name: mongodb-data     # Must match the volume name below
          mountPath: /data/db    # This is where MongoDB naturally saves data inside the container
          
      # A. Define the volume using the Claim
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-pvc # Points to the PVC we created in step 2
