frontend.yml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: hr-frontend 

spec: 
  replicas: 2 
  selector:
    matchLabels:
      app: hr-frontend   
  template:
    metadata:
      labels:
        app: hr-frontend

    spec: 
      containers:
      - name: frontend 
        image: jeffrinjojo/hr-frontend:9 
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m" 
            memory: "256Mi"


---
# frontend service
apiVersion: v1 
kind: Service 
metadata: 
  name: frontend-service 
spec:
  selector:
    app: hr-frontend 

  ports:
  - protocol: TCP
    port: 80 
    targetPort: 80 
    nodePort: 30000 
   

  type: NodePort
