ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hr-app-ingress
spec:
  rules:
  - host: hr-app.company.com      # If the user types this domain...
    http:
      paths:
      - path: /                   # And goes to the root path...
        pathType: Prefix
        backend:
          service:
            name: frontend-service # ...Send them to the frontend Service!
            port:
              number: 80
      - path: /api                # BUT if they go to /api...
        pathType: Prefix
        backend:
          service:
            name: backend-service  # ...Send them directly to the backend Service!
            port:
              number: 5000
